apps/blue-vision/app/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue-vision-app
  namespace: blue-vision
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blue-vision-app
  template:
    metadata:
      labels:
        app: blue-vision-app
    spec:
      nodeSelector:
        node-role.kubernetes.io/worker: worker

      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: "kubernetes.io/hostname"
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: blue-vision-app

      containers:
      - name: blue-vision-app
        image: ghcr.io/harris-consult/blue-vision-app:latest
        ports:
        - containerPort: 3000
