apps/blue-vision/app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blue-vision-app
  namespace: blue-vision
spec:
  selector:
    app: blue-vision-app
  ports:
  - port: 80
    targetPort: 4173
